--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -10,6 +10,6 @@
         android:title="Laliga" />
     <item
         android:id="@+id/nav_profile"
-        android:icon="@drawable/profile"
+        android:icon="@drawable/profile_img"
         android:title="Profile" />
 </menu>
